# bioinfo1

./: .gitignore  Alati_za_poravnanje_ocitanja_na_referntni_genom.pptx  CMakeLists.txt  Kic_Anamarija_i_Kekic_Marta.doc  LICENSE  Poravnanja_excell.pptx  README.md  dokumentacija_primjer.fasta.txt  main.cpp  primjer_minimizeri.txt  ref.fasta  reference.fasta  seq.fasta.txt  team_mapper.cpp
team_alignment/: team_alignment.cpp  team_alignment.hpp
team_minimizers/: team_minimizers.cpp  team_minimizers.hpp
